--- a/src/components/DigitalTimer/index.css
+++ b/src/components/DigitalTimer/index.css
@@ -9,6 +9,7 @@
   min-height: 100vh;
   max-height: 100%;
   font-family: Roboto;
+  font-weight: bold;
 }
 .page-heading {
   font-size: 30px;
@@ -47,7 +48,12 @@
   font-weight: 800;
 }
 .controls-container {
+  width: 250px;
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .bold {
   font-weight: bold;
@@ -56,7 +62,7 @@
 .start-pause-and-reset-container {
   display: flex;
   align-items: center;
-  width: 400px;
+  width: 200px;
 }
 .start-pause-container {
   display: flex;
@@ -66,19 +72,53 @@
   border: none;
   background-color: transparent;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
 }
 .play-pause-img {
-  width: 15px;
+  width: 25px;
 }
 .reset-container {
   display: flex;
+  margin-left: 20px;
 }
 .reset-btn {
   outline: none;
   border: none;
   background-color: transparent;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  font-size: 20px;
 }
 .reset-img {
-  width: 15px;
+  width: 25px;
+}
+.timer-limit-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.decrease-increase-btn {
+  outline: none;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 25px;
+  font-weight: 800;
+  margin: 10px;
+}
+.timer-limit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 30px;
+  border-radius: 10px;
+  background-image: linear-gradient(to right, #56ea65, #00d9f5);
 }
